# SimpleUcsms

./: .gitignore  CMakeLists.txt  README.md  main.c
Core/: includes.h
Data/: CarInfo.h  Data.c  Data.h
Example/: data.txt  data.txt.bak  new.txt
IO/: Console.c  File.h
UI/: BaseUI.c  BaseUI.h  UI.c  UI.h
User/: Login.c  Permission.h
src/: main.c
src/Core/: common.c  common.h  definition.h
src/Data/: CarInfo.h  Data.c  Data.h
src/IO/: Console.h  File.c  File.h
src/UI/: BaseUI.c  BaseUI.h  UI.c  UI.h  UIString.c  UIString.h
src/User/: Login.c  Login.h  Permission.c  Permission.h
